# k8s-fastapi

./: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: main.py
