[tool.poetry]
name = "k8s-101"
version = "0.1.0"
description = ""
authors = ["jarp0l <57973356+jarp0l@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
